--- a/layouts/header.html
+++ b/layouts/header.html
@@ -8,7 +8,7 @@
 <body>
     <header>
       <div class="container">
-        <a href="#" class="logo">
+        <a href="#" class="logo" target="_parent">
         <img src="../assets/imagens/logodesafio.png.png" alt="Logo do site" width="64px" height="64px">
         </a>
         <nav>
