--- a/layouts/header.html
+++ b/layouts/header.html
@@ -13,9 +13,9 @@
         </a>
         <nav>
             <ul>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="../index.html">Menu</a></li>
+                <li><a href="../pages/pag1.html">Sobre</a></li>
+                <li><a href="../pages/pag3.html">Contato</a></li>
             </ul>
         </nav>
       </div>
