--- a/layouts/header.html
+++ b/layouts/header.html
@@ -8,14 +8,14 @@
 <body>
     <header>
       <div class="container">
-        <a href="#" class="logo" target="_parent">
+        <a href="#" class="logo" ></a>
         <img src="../assets/imagens/logodesafio.png.png" alt="Logo do site" width="64px" height="64px">
         </a>
         <nav>
             <ul>
-                <li><a href="../index.html">Menu</a></li>
-                <li><a href="../pages/pag1.html">Sobre</a></li>
-                <li><a href="../pages/pag3.html">Contato</a></li>
+                <li><a href="../index.html" target="_parent">Menu</a></li>
+                <li><a href="../pages/pag1.html" target="_parent">Sobre</a></li>
+                <li><a href="../pages/pag3.html"  target="_parent">Contato</a></li>
             </ul>
         </nav>
       </div>
