--- a/pages/pag4.css
+++ b/pages/pag4.css
@@ -14,6 +14,7 @@ article {
     border-radius: 5px;
  font-family: 'Franklin Gothic Medium';
  font-size: 20px;
+ margin: 50px;
 }
 #botão:hover{
 font-size:25px;
