--- a/layouts/footer.css
+++ b/layouts/footer.css
@@ -9,6 +9,9 @@ body{
     margin:0%;
     padding: 0%;
     text-align: center;
+    bottom: 0px;
+    position: fixed;
+    width: 100%;
 }
 #p1{
     color: white; 
