--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="../assets/css/footer.css">
 </head>
 <body>
     <footer>
