--- a/layouts/header.html
+++ b/layouts/header.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="../assets/css/header.css">
 </head>
 <body>
     <header>
