--- a/assets/css/pag3.css
+++ b/assets/css/pag3.css
@@ -21,8 +21,7 @@ body {
 }
 
 #enviar {
-    color: white
-    outline: 0;
+    color: white;
     width: 51%;
     background-color: rgb(238, 71, 33);
     padding: 5px
@@ -63,6 +62,7 @@ p {
 }
 
 iframe {
+    
 
     margin-bottom: -5px;
 }
