--- a/assets/css/pag1.css
+++ b/assets/css/pag1.css
@@ -41,3 +41,12 @@ iframe {
     padding: 0;
     margin-bottom: -5px;
 }
+
+main {
+    margin: 5px;
+    padding: 10px;
+    border: 2px black solid;
+    text-align: justify;
+    box-shadow:  2px 2px black;
+    border-left: 10px solid red;
+}
