--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -21,7 +21,7 @@ body{
 nav ul{
     list-style: none;
     margin:0;
-    padding:0;
+    padding: 20px;
     display: flex;
     justify-content: center;
 }
