--- a/assets/css/pag1.css
+++ b/assets/css/pag1.css
@@ -18,7 +18,6 @@ section{
     padding: 10px;
     border: 2px black solid;
     text-align: justify;
-    box-shadow:  2px 2px black;
     border-left: 10px solid red;
 }
 
@@ -40,4 +39,8 @@ iframe {
     margin: 0;
     padding: 0;
     margin-bottom: -5px;
+}
+#imgs:hover {
+    transform: scale(0.3);
+    
 }
