--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -16,13 +16,12 @@ body{
     margin:0 auto;
     align-items: center;
     justify-content:center;
-    transform: rotate(360);
 
 }
 nav ul{
     list-style: none;
     margin:0;
-    padding:0;
+    padding: 20px;
     display: flex;
     justify-content: center;
 }
