--- a/assets/css/pag3.css
+++ b/assets/css/pag3.css
@@ -28,10 +28,10 @@ body {
 }
 
 form {
-        display: flex;
-        flex-direction: column;
-        margin: auto;
-        width: 70%
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 70%
 
 }
 
@@ -52,17 +52,13 @@ form {
     margin: 50%
 }
 
-p {
+h1 {
     text-align: center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
-    margin-left: 10px;
-
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
 
 }
 
 iframe {
-    
-
     margin-bottom: -5px;
 }
