--- a/assets/css/pag4.css
+++ b/assets/css/pag4.css
@@ -4,9 +4,9 @@ body {
     margin: 0;
 }
 article {
-    width: 50%;
+   
     margin:auto;
-    font-family: 'Courier New';
+    font-family: 'arial';
     text-align: center;
 }
 #botão {
@@ -14,13 +14,13 @@ article {
     width: 150px;
     height: 50px;
     border-radius: 5px;
- font-family: 'Franklin Gothic Medium';
+ font-family: 'arial';
  font-size: 20px;
  margin: 0px;
 }
 #botão:hover{
 font-size:25px;
-width:170px;
+width:190px;
 height: 75px;
 background-color:rgba(40, 211, 40, 0.774);
 color: white;
