coloquei imagem na page sobre

--- a/assets/css/pag1.css
+++ b/assets/css/pag1.css
@@ -63,7 +63,12 @@ main {
     
 }
 #banner {
-    width: 80%;
-    height: 250px;
+    text-align: center;
+width: 1470px;
+height: 500px;
+}
+
+#img {
+    text-align: center;
 }
 
