--- a/layouts/header.html
+++ b/layouts/header.html
@@ -9,7 +9,7 @@
     <header>
       <div class="container">
         <a href="#" class="logo" ></a>
-        <a href="../index.html" target="_parent"><img src="../assets/imagens/logodesafio.png.png" alt="Logo do site" width="64px" height="64px"></a>
+        <a href="../index.html" target="_parent"><img id="img1" src="../assets/imagens/logodesafio.png.png" alt="Logo do site" width="64px" height="64px"></a>
         </a>
         <nav>
             <ul>
