--- a/assets/css/pag1.css
+++ b/assets/css/pag1.css
@@ -43,8 +43,8 @@ section {
 }
 
 img {
-    width: 128px;
-    height: 128px;
+    width: 256px;
+    height: 256px;
 }
 
 iframe {
@@ -69,9 +69,14 @@ main {
 #card {
     background-color: rgb(205, 192, 174);
     justify-content: center;
+    
+}
+.card {
+    text-align: center;
+    justify-content: center;
 }
 
-#card:hover {
+.card:hover {
     transform: scale(1.05);
 
 }
@@ -87,3 +92,7 @@ main {
 #img {
     text-align: center;
 }
+.ç {
+    text-align: justify;
+}
+
